<resources>
    <string name="app_name">Coex User</string>
    <string name="default_notification_channel_id">1803</string>

    <string name="nav_home_home">Home</string>
    <string name="nav_home_schedule">Schedule</string>
    <string name="nav_home_setting">Settings</string>

    <string name="you_are_here">Bạn đang ở đây</string>


    <!-- splash -->
    <string name="token_valid">Token hợp lệ</string>
    <string name="token_invalid">Token không hợp lệ</string>

    <!-- login -->
    <string name="login">Đăng nhập</string>
    <string name="phone_placeholder">Nhập số điện thoại</string>
    <string name="password_placeholder">Nhập mật khẩu</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_failed">Đăng nhập thất bại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_location_permission">Require permission</string>
    <string name="text_location_permission">Location permission</string>
    <string name="ok">OK</string>
    <string name="maps_api_key">AIzaSyD0aoSy5j9936YhXwTtbmrjLtdfyV3g1oU</string>
    <string name="detail_coex_wifi">Free Wifi</string>
    <string name="detail_coex_drink">Drink</string>
    <string name="detail_coex_printer">Printer</string>
    <string name="detail_coex_conversion_call">Conversion call</string>
    <string name="detail_coex_air_conditioning">Air Conditioning</string>
    <string name="activity_detail_coex_about_space">About Space</string>
    <string name="activity_detail_coex_our_service">Our service</string>
    <string name="activity_detail_coex_view_more">View more</string>
    <string name="activity_detail_coex_edt_confirm_booking">Book room</string>
    <string name="activity_booking_title">Booking</string>
    <string name="activity_booking_style_room">Room</string>
    <string name="activity_booking_hint_style_room">Select room</string>
    <string name="activity_booking_number_of_guest">Number of guest</string>
    <string name="activity_booking_hint_guest">Guest(s)</string>
    <string name="activity_booking_time_of_appointment">Time of appointment</string>
    <string name="activity_booking_hint_time_of_appointment">Choose the time</string>
    <string name="activity_booking_duration">Duration</string>
    <string name="activity_booking_txt_total_amount">Total amount</string>
    <string name="activity_booking_btn_booking">Booking</string>
    <string name="fragment_space_list_title">Space list</string>
    <string name="activity_detail_coex_txt_style_room">List room</string>
    <string name="activity_profile_title">Profile</string>
    <string name="activity_profile_txt_gen_id">GEN ID:</string>
    <string name="activity_profile_txt_email">Email:</string>
    <string name="activity_profile_txt_phone_number">Phone number:</string>
    <string name="activity_profile_txt_change_password">Change password</string>
    <string name="activity_profile_txt_edit_profile">Edit profile</string>
    <string name="activity_edit_profile_title">Edit profile</string>
    <string name="activity_edit_profile_txt_name">Name</string>
    <string name="activity_edit_profile_hint_name">Add your edit name here</string>
    <string name="activity_edit_profile_txt_phone">Phone number</string>
    <string name="activity_edit_profile_hint_phone">Add new phone number here</string>
    <string name="activity_edit_profile_btn_submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="activity_p_and_r_title"><![CDATA[Point & Reward]]></string>
    <string name="btn_change_to_reward">Change to reward</string>
    <string name="btn_convert_to_coin">Convert to coin</string>
    <string name="activity_p_and_r_txt_title_earn_point">How to earn point?</string>
    <string name="activity_p_and_r_txt_descroption_earn_point">- Earning points will be base on the value of the complete booking payment.</string>
    <string name="activity_p_and_r_txt_descroption_earn_point_2">- Accumulate</string>
    <string name="activity_p_and_r_txt_title_card">Your card</string>
    <string name="activity_p_and_r_txt_descroption_card">- Card contain your account number where you convert point to coin </string>
    <string name="activity_p_and_r_txt_descroption_card_2">- With 1.000.000 point, you will have 1 coin</string>
    <string name="activity_p_and_r_btn_change_card">Change your card</string>
    <string name="activity_p_and_r_btn_add_card">Add card</string>
    <string name="fragment_setting_txt_title">Setting</string>
    <string name="fragment_setting_txt_log_out">Log out</string>
    <string name="fragment_setting_txt_profile">profile</string>
    <string name="fragment_setting_txt_p_and_r"><![CDATA[Point & reward]]></string>
    <string name="fragment_setting_txt_general">General</string>
    <string name="fragment_setting_txt_about_us">About us</string>
    <string name="fragment_setting_txt_policy">Policy</string>
    <string name="accept">Accept</string>
    <string name="coex_position">COEX in here</string>
    <string name="activity_booking_hint_time">hour</string>
    <string name="fragment_schedule_txt_title">My schedule</string>
    <string name="fragment_schedule_txt_title_info_booking">Infomation of booking</string>
    <string name="activity_schedule_txt_number_of_guest">Number of guest</string>
    <string name="activity_schedule_txt_time_of_appointment">Time of appointment</string>
    <string name="activity_schedule_txt_duration">Duration</string>
    <string name="fragment_schedule_txt_total_amount">Total amount</string>
    <string name="fragment_schedule_txt_q_r_code">QR code for check in</string>
    <string name="btn_more_info">More infomation booking</string>
    <string name="fragment_schedule_txt_style_room">List room</string>
    <string name="used">FOR USER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="btnLogin">Login</string>
    <string name="txtLogin">I don\'t have an account on COEX?</string>
    <string name="btnRegister">REGISTER</string>
    <string name="cofirm_password">Confirm password</string>
    <string name="txtRegister">I already have an account on COEX</string>
    <string name="btnForgotPassword">SEND EMAIL</string>
    <string name="change_data_account_type_1_txt_title">Change password</string>
    <string name="change_data_account_type_1_txt_title_2">Old password</string>
    <string name="change_data_account_type_1_txt_title_3">New password</string>
    <string name="change_data_account_type_2_txt_title">Edit profile</string>
    <string name="change_data_account_type_2_txt_title_2">Name</string>
    <string name="change_data_account_type_2_txt_title_3">Phone number</string>
    <string name="change_data_account_type_1_btn_title">Change password</string>
    <string name="change_data_account_type_2_btn_title">Submit</string>
    <string name="activity_change_data_account_dialog_txt_des">Do you sure submit this  change?</string>
    <string name="activity_change_data_account_dialog_txt_title_type_1">Confirm change password</string>
    <string name="activity_change_data_account_dialog_txt_title_type_2">Confirm change profile</string>
    <string name="activity_booking_dialog_txt_title">Confirm booking room</string>
    <string name="activity_booking_dialog_txt_des">Do you sure booking this room</string>
    <string name="activity_add_info_txt_title">My infomation</string>
    <string name="activity_add_info_txt_des">For better care, Please let us know more about you!</string>
    <string name="activity_add_info_txt_name">Name</string>
    <string name="activity_add_info_txt_phone">Phone number</string>
    <string name="activity_add_info_tn_view_location">View location of space</string>
    <string name="activity_add_info_btn_skip">Skip now, back to login</string>
    <string name="activity_add_info_tn_submit">Submit</string>
    <string name="fragment_setting_txt_my_wallet">My Wallet</string>
    <string name="activity_p_and_r_btn_exchange_to_card">Exchange to coins</string>
    <string name="activity_exhcnage_to_coin_txt_exting_point">My existing point</string>
    <string name="activity_exhcnage_to_coin_txt_exting_coint">My existing coins</string>
    <string name="activity_exchange_to_coin_txt_add_point">Add point</string>
    <string name="activity_exchange_to_coin_txt_add_point_des">Coins are priced and changed on the exchange in the current market</string>
    <string name="activity_exchange_to_coin_txt_policy">COEX\'s privacy and policy</string>
    <string name="activity_exchange_to_coin_hint_point">Point(s)</string>
    <string name="activity_exchange_to_coin_hint_coin">Coin(s)</string>
    <string name="activity_exchange_to_coin_txt_exhange_to_coin">Exchange point</string>
    <string name="activity_my_wallet_txt_title">My wallet</string>
    <string name="activity_my_wallet_txt_history">History</string>
    <string name="activity_my_wallet_btn_widthraw">Withdraw</string>
    <string name="activity_my_wallet_btn_add_card">Add my card</string>
    <string name="dialog_view_more_title">Our service</string>
    <string name="dialog_view_more_orther_service">Orther service</string>
    <string name="activity_map_dialog_txt_title">Quit</string>
    <string name="activity_map_dialog_txt_des">Are you sure you wanna to quit?</string>
    <string name="item_schedule_txt_title">Info booking</string>
    <string name="edit">Edit</string>
    <string name="activity_booking_dialog_txt_title_style_2">Edit Booking</string>
    <string name="activity_booking_dialog_txt_des_style_2">Do you sure change this booking</string>
    <string name="activity_edit_profile_txt_confirm_pass">Confirm pass</string>
    <string name="activity_edit_profile_hint_confirm_pass">Confirm pass</string>
    <string name="fragment_schedule_txt_dialog_title">Confirm cancel booking</string>
    <string name="fragment_schedule_txt_dialog_des">Are you sure cancel this booking?</string>
    <string name="activity_exchange_to_coin_til_dialog">Confirm to convert</string>
    <string name="activity_exchange_to_coin_des_dialog">Do you sure exchange point to coin?</string>
    <string name="activity_add_card_txt_title">Add card</string>
    <string name="activity_add_card_btn_add">Add card</string>
    <string name="activity_add_card_txt_name">Name of address</string>
    <string name="activity_add_card_txt_address">Address</string>
    <string name="activity_add_card_txt_address_hint">Address when you withdraw coins</string>
    <string name="activity_withdraw_txt_title">Withdraw</string>
    <string name="activity_withdraw_btn_withdraw">Withdraw</string>
    <string name="activity_withdraw_txt_add_point">To withdraw</string>
    <string name="activity_withdraw_txt_add_point_des">With 1 coin you will get 1 ETH in your wallet</string>
    <string name="activity_withdraw_txt_des">Choose card</string>
    <string name="dialog_time_picler_btn_choose">Choose</string>
    <string name="activity_history_exchange_txt_title">History Exchange</string>
    <string name="fragment_schedule_txt_status">Status</string>
    <string name="activity_schedule_txt_tran_id">Booking reference</string>
    <string name="payment">Payment</string>
    <string name="activity_vnpay_title">Vnpay Payment</string>
    <string name="vnpay_payment">Payment by VNPAY</string>
    <string name="zalo_payment">Payment by Zalo Pay</string>
    <string name="payment_done">Paid</string>
</resources>
