<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_booking_status_bar_height">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_status_bar_height">

                <TextView
                    style="@style/title_14_pink_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activity_add_info_txt_title" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_marginRight="@dimen/text_margin_left"
            android:orientation="vertical">

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top_higher"
                android:text="@string/activity_add_info_txt_des" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:layout_marginTop="@dimen/text_margin_top_higher"
                android:src="@color/silver_black" />

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top_higher"
                android:text="@string/activity_add_info_txt_name" />

            <EditText
                android:id="@+id/activity_add_info_edt_input_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_edittext_height"
                android:layout_marginTop="@dimen/margin_top_shorter"
                android:background="@drawable/edt_background"
                android:fontFamily="@font/roboto_light"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top_higher"
                android:text="@string/activity_add_info_txt_phone" />

            <EditText
                android:id="@+id/activity_add_info_edt_input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_edittext_height"
                android:layout_marginTop="@dimen/margin_top_shorter"
                android:background="@drawable/edt_background"
                android:fontFamily="@font/roboto_light"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/activity_add_info_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_button_hieght"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_normal_background"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/activity_add_info_tn_submit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/activity_add_info_btn_skip"
                style="@style/title_13_black_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_button_hieght"
                android:layout_marginTop="@dimen/text_margin_top"
                android:background="@drawable/cancel_button_normal"
                android:text="@string/activity_add_info_btn_skip"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>