<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurbb">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"></RelativeLayout>

    <ImageButton
        android:id="@+id/btnBackForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:layout_marginTop="@dimen/marginStartContext"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:fitsSystemWindows="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="222dp"
        android:layout_height="106dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/coex" />

    <TextView
        android:id="@+id/forpartner"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_activity_role_margin_top"
        android:gravity="center"
        android:text="@string/used"
        android:textAppearance="@style/textForPartner"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:layout_marginTop="@dimen/marginTopLogo"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/email"
        android:textAppearance="@style/textNormal"
        android:textSize="@dimen/login_activity_small_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtForgotPassEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_activity_input_height"
        android:layout_below="@id/txtEmail"
        android:layout_alignLeft="@id/txtEmail"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="@dimen/marginStartContext"
        android:background="@drawable/edt_background"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/login_activity_input_padding_left"
        android:paddingEnd="@dimen/login_activity_input_padding_right" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtForgotPassEmail"
        android:layout_alignLeft="@id/edtForgotPassEmail"
        android:layout_alignRight="@id/edtForgotPassEmail"
        android:layout_marginTop="@dimen/marginbtn"
        android:background="@drawable/btn_normal_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btnForgotPassword"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>